main.css
header, nav, section, aside, footer {
    display: block; 
}

body{
    background-color: #fbfbf7;
    font-family: Georgia, 'Times New Roman', Times, serif;
    margin: 0 2%;
}

.content {
    padding-top: 2%;
    clear:both;
    border-top:2px solid black;
}

#wrap {
    width:100%;
    overflow:auto;
}

/*styling for the title and background image*/
.title {
    clear: both;
    padding: 3% 0 35%;
}
 .title img {
    position:absolute;
    width:96%;
    z-index:-1;
}  
.title h1 {
    font-weight: bold;
    margin: 0;
    padding: 5% 0;
    width:96%;
    position:absolute;
    z-index: 0;
    text-align: center;
}
#myName{
    font-size: 50px;
    font-weight: bolder;
    padding: 12% 0;
}

/*Home page cover*/
#homeCover header {
    padding: 30% 10% 20%;
    color: black;
    margin: 0;
    background-color: #f1e6de; 
    border-bottom: 2px solid black;
}
#name {
    font-size: 50px;
    font-weight: bolder;
}
#homeCover img {
     width:20%;
     padding:7%;
     float:left;
     clear:both;
 }



 /*spacing under the title*/
 .spacing
 {
     width: 100%;
     padding-top: 132px;
 }

/*nav styling*/
nav {
    z-index:1;
    position:fixed;
    width:96%; 
    background-color: #fbfbf7;  
    padding-top:1%;
}
nav ul {
    list-style:none;
    padding: 2%;
    margin: 0;
    text-align: center;
    border-bottom: 2px solid black;
}
nav li {
    display:inline;
    padding: 0 5%;
}
nav img {
    padding-left:2%;
    width: 6%;
    min-width: 55px;
    max-width: 75px;
    float:left;
}
nav h1 {
    background-color: #fbfbf7;  
    color:black;
    font-weight: bold;
    margin: 0;
    padding: 1% 2%;
    font-size: 2em;
}
a { /*link styling*/
    color: black; 
    text-decoration: none; 
    font-size:20px;
    font-weight: lighter;
 }


 /*text*/
 p {
    font-size:110%; /*100%;*/
    text-align: center;
    background-color: #eddaca;
    padding:2%;
    font-family: Arial, Helvetica, sans-serif;
 }
p img {
    width:35%;
}
p a {
    font-size: 110%; /*100%;*/
    font-family: Arial, Helvetica, sans-serif;
    text-decoration: underline;
}

li {
    font-size: 110%;
}



 /*left sided section*/
.leftSection {
    padding: 4%;
    width:63%;
    float:left;
    border-right: 2px solid black;
}
 /*right sided section*/
 .rightSection {
    padding: 4%;
    width:63%;
    float:right;
    border-left: 2px solid black;
}

 /*aside right image bar*/
 .rightImgBar {
    float:right;
    padding: 6% 3%;
    width: 22%;
}
.rightImgBar img, iframe {
    width:90%;
    padding:8%;
    background-color: #eddaca;
    margin-top:40%;
    margin-top: 85px;
    max-width: 200px;
    min-width: 167px
}

/*aside left image bar*/
.leftAside {
    float:left;
    padding: 3%;
    width: 22%;

    max-height: 100%; /* Change this value based on your design */
    overflow: hidden; /* Hide any overflow beyond the max-height */
}
.leftAside img {
    width: 90%;
    padding: 7%;
    background-color: #eddaca;
    margin-top: 14%; /*26%;*/
}

/*experience page styling*/
#experience h3, h4 {
    color:black;
    padding:2% 1%;
    margin:0;
    background-color: #eddaca;
}
#experience h2 {
    margin-top:5%;
    font-weight:bold;
    text-decoration: underline;
    text-align: center;
}
#experience h3 {
    padding-bottom: 0;
}
#experience h4 {
    font-style: italic;
}
#experience h5 {
    float:right;
    margin:2% 1% 0 0;
    padding:0;
 }
 #experience ul {
     padding:2% 2% 2% 10%;
 }



 @media screen and (min-width:1370px)  {
    .leftAside img {
        width: 74%;
        margin: 0 7%;
    }
 }

 /*ipad*/
 @media screen and (max-width:825px) {
    .leftAside {
        clear:both;
        width:94%;
        padding-top: 0;
    }
    .leftAside img {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 40%;
        margin-top: 0;
    }

    .rightSection {
        display:block;
        width:94%;
        border-left:none;
    }

    .rightImgBar {
        float: right;
        padding: 6% 1%;
        width: 19%;
    }

    .rightImgBar img, iframe {
        width: 90%;
        padding: 8%;
        background-color: #eddaca;
        margin-top: 40%;
        margin-top: 125px;
        max-width: 157px;
        min-width: 82px;
    }

    .leftSection {
        padding: 4%;
        width: 70%;
        float: left;
        border-right: 2px solid black;
    }

 }

@media screen and (max-width:819px) {
    .spacing {
        padding-top:104px;
    }

    .leftSection {
        width:92%;
        border-right:none;
    }

    .rightSection {
        display:block;
        width:94%;
        border-left:none;
    }

    .leftAside {
        clear:both;
        width:94%;
        padding-top: 0;
    }
    .leftAside img {
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 40%;
        margin-top: 0;
    }

    .rightImgBar {
        display:none;
    }
}

@media screen and (max-width:500px) {
    /*styling for the title and background image*/
    .spacing {
        padding-top:175px;
    }
    
    .title h1 {
        font-size: 17px;
    }
    #myName {
        font-size: 23px;
    }

   
     /*left sided section*/
    .leftSection {
        padding: 4%;
        width:94%;
        float:left;
        border-right: 2px solid black;
    }
    /*right sided section*/
    .rightSection {
        padding: 4%;
        width:94%;
        float:right;
    }

    .rightImgBar {
        display:none;
    }

    p, a {
        font-size: 14px;
    }
    p img {
        min-width: 117px;
    }


    /*nav styling*/
    nav ul {
        list-style:none;
        padding: 2%;
        margin: 0;
        text-align: center;
        border-bottom: 2px solid black;
    }
    nav li {
        display:block;
        border-bottom:2px solid black;
        padding: 1% 5% 1% 0;
    }
    nav li:last-child {
        border-bottom:0;
    }
    nav img {
        min-width: 44px;
        max-width: 75px;
    }
    nav a {
        font-size:16px;
    }


    h1, nav h1 {
        font-size: 25px;
    }


    #experience h3 {
        font-size:18px;
        padding-bottom: 0;
    }
    #experience h4 {
        font-size: 13px;
        display: block;
        width: 98%;
        margin-bottom: 4%;
    }
    #experience h2 {
        font-size:20px;
    }
    #experience h5 {
        font-size: 11px;
        padding: 3% 1%;
        clear: both;
        background-color: #eddaca;
        float: left;
        margin: 0;
        display: block;
        width: 90%;
     }

     #experience ul {
       font-size:14px;
    }

}

